--- a/views/index.erb
+++ b/views/index.erb
@@ -10,6 +10,6 @@
     <h2>Bet You Can't Bowl A Strike Every Time</h2>
     <p>97 Bowling Alley Lane, Boulder CO </p>
   </body>
-  <%= "I Love " + "Ruby!!" %>
+  <h1><%= "I Love " + "Ruby!!" %></h1>
   <%= 1 + 1 %>
 </html>
