--- a/views/index.erb
+++ b/views/index.erb
@@ -13,9 +13,9 @@
   <h1><%= "I Love " + "Ruby!!" %></h1>
   <%= 1 + 1 %>
   
-  <%= if 1 == 2 %>
+  <% if 1 == 2 %>
   <p>1 equals 2.</p>
-  <%= else %>
+  <% else %>
   <p>1 does not equal 2.</p>
-  <%= end %>
+  <% end %>
 </html>
