--- a/views/index.erb
+++ b/views/index.erb
@@ -20,7 +20,7 @@
   <% end %>
   
   <ul>
-  <% squares = [1, 4, 9, 16] %>
+  <%= squares = [1, 4, 9, 16] %>
   <% squares.each do |square| %>
     <li><%= square %></li>
   <% end %>
