--- a/views/index.erb
+++ b/views/index.erb
@@ -21,7 +21,7 @@
   
   <ul>
   <%= squares = [1, 4, 9, 16] %>
-  <% squares.each do |square| %>
+  <%= squares.each do |square| %>
     <li><%= square %></li>
   <% end %>
   </ul>
