--- a/views/index.erb
+++ b/views/index.erb
@@ -20,8 +20,8 @@
   <% end %>
   
   <ul>
-  <%= squares = [1, 4, 9, 16] %>
-  <%= squares.each do |square| %>
+  <% squares = [1, 4, 9, 16] %>
+  <% squares.each do |square| %>
     <li><%= square %></li>
   <% end %>
   </ul>
